--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,24 +24,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'FaceDatabase' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m db \u001b[38;5;241m=\u001b[39m \u001b[43mFaceDatabase\u001b[49m(file_path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdatabase.pkl\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m filename \u001b[38;5;129;01min\u001b[39;00m glob\u001b[38;5;241m.\u001b[39mglob(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/pics/train/*.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(filename)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'FaceDatabase' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".\\pics\\train\\Angelina_Jolie_1.jpg\n",
+      ".\\pics\\train\\Angelina_Jolie_2.jpg\n",
+      ".\\pics\\train\\Angelina_Jolie_3.jpg\n",
+      ".\\pics\\train\\Scarlett_Johansson_1.jpg\n",
+      ".\\pics\\train\\Scarlett_Johansson_2.jpg\n",
+      ".\\pics\\train\\Scarlett_Johansson_3.jpg\n",
+      ".\\pics\\train\\Tom_Cruise_1.jpg\n",
+      ".\\pics\\train\\Tom_Cruise_2.jpg\n",
+      ".\\pics\\train\\Tom_Cruise_3.jpg\n",
+      ".\\pics\\train\\Will_Smith_1.jpg\n",
+      ".\\pics\\train\\Will_Smith_2.jpg\n",
+      ".\\pics\\train\\Will_Smith_3.jpg\n"
      ]
     }
    ],
    "source": [
     "db = FaceDatabase(file_path=\"database.pkl\")\n",
-    "for filename in glob.glob(r'/pics/train/*.jpg'):\n",
+    "for filename in glob.glob(r'.\\pics\\train\\*.jpg'):\n",
     "    print(filename)\n",
     "    pic = Image.open(filename)\n",
     "    pic_arr = np.array(pic)\n",
@@ -57,9 +64,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "is_true_positive() got an unexpected keyword argument 'detection_threshold'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 27\u001b[0m\n\u001b[0;32m     24\u001b[0m labels \u001b[38;5;241m=\u001b[39m [name] \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mlen\u001b[39m(descriptors)\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m prob \u001b[38;5;129;01min\u001b[39;00m probs:\n\u001b[1;32m---> 27\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mis_true_positive\u001b[49m\u001b[43m(\u001b[49m\u001b[43mprob\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdetection_threshold\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m)\u001b[49m: \u001b[38;5;66;03m# 0.5 is placeholder\u001b[39;00m\n\u001b[0;32m     28\u001b[0m         true_positives\u001b[38;5;241m.\u001b[39mappend(prob)\n\u001b[0;32m     29\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[1;31mTypeError\u001b[0m: is_true_positive() got an unexpected keyword argument 'detection_threshold'"
+     ]
+    }
+   ],
    "source": [
     "match_distances = []\n",
     "non_match_distances = []\n",
@@ -87,7 +106,7 @@
     "    labels = [name] * len(descriptors)\n",
     "\n",
     "    for prob in probs:\n",
-    "        if is_true_positive(prob, detection_threshold=0.5): # 0.5 is placeholder\n",
+    "        if is_true_positive(prob, threshold=0.5): # 0.5 is placeholder\n",
     "            true_positives.append(prob)\n",
     "        else:\n",
     "            false_negatives.append(prob)\n",
