--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,10 +13,12 @@
     "from facenet_models import FacenetModel\n",
     "from vision_profile import FaceDatabase\n",
     "from camera import take_picture\n",
-    "from estimation import detect_face_prob, extract_descriptors, plot_histograms, cosine_distance, is_true_positive\n",
+    "from estimation import detect_face_prob, extract_descriptors, plot_histograms, is_true_positive\n",
+    "from cosdistance import cosine_distance\n",
+    "from descriptor import descriptorMatch, displayFinalPicture\n",
     "\n",
     "\n",
-    "%matplotlib notebook\n",
+    "%matplotlib inline\n",
     "\n",
     "\n",
     "model = FacenetModel()"
@@ -24,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -32,17 +34,12 @@
      "output_type": "stream",
      "text": [
       "Angelina_Jolie\n",
+      "added\n",
       "Angelina_Jolie\n",
+      "added\n",
       "Angelina_Jolie\n",
-      "Scarlett_Johansson\n",
-      "Scarlett_Johansson\n",
-      "Scarlett_Johansson\n",
-      "Tom_Cruise\n",
-      "Tom_Cruise\n",
-      "Tom_Cruise\n",
-      "Will_Smith\n",
-      "Will_Smith\n",
-      "Will_Smith\n"
+      "added\n",
+      "saved\n"
      ]
     }
    ],
@@ -50,20 +47,105 @@
     "labels = []\n",
     "\n",
     "db = FaceDatabase(file_path=\"database.pkl\")\n",
+    "count = 0\n",
     "for filename in glob.glob(r'.\\pics\\train\\*.jpg'):\n",
-    "    #print(filename)\n",
+    "    if count == 3:\n",
+    "        break\n",
     "    pic = Image.open(filename)\n",
     "    pic_arr = np.array(pic)\n",
     "    boxes, probabilities, landmarks = model.detect(pic_arr)\n",
     "    name = filename[13:-6]\n",
-    "\n",
+    "    print(name)\n",
     "    labels.append(name)\n",
     "    descriptors = model.compute_descriptors(pic_arr, boxes) #gets descriptor for every file\n",
     "    db.add_image(name, descriptors)\n",
+    "    print('added')\n",
+    "    count += 1\n",
     "db.save()\n",
+    "print('saved')\n",
     " \n",
     "#pic = Image.open(r'pics/test/Will_Smith_test.jpg')  \n",
     "#pic_arr = np.array(pic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['Angelina_Jolie'])\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'dict_values' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[19], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m db\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdatabase.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(db\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mkeys())\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43m(\u001b[49m\u001b[43mdb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'dict_values' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "db.load('database.pkl')\n",
+    "print(db.data.keys())\n",
+    "print(db.data.values()[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of faces detected: 1\n",
+      "<vision_profile.Profile object at 0x000002A2992B0760>\n"
+     ]
+    },
+    {
+     "ename": "AxisError",
+     "evalue": "axis 0 is out of bounds for array of dimension 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAxisError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m db\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdatabase.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNumber of faces detected: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(boxes)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 8\u001b[0m verdict \u001b[38;5;241m=\u001b[39m \u001b[43mdescriptorMatch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdescriptors\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mthreshold\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(verdict)\n\u001b[0;32m     10\u001b[0m displayFinalPicture(pic_arr, verdict)\n",
+      "File \u001b[1;32mc:\\Users\\kavya\\Documents\\GitHub\\cogworks-visualproj\\descriptor.py:17\u001b[0m, in \u001b[0;36mdescriptorMatch\u001b[1;34m(database, descriptor, threshold)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, d \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(database\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mvalues()):\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;28mprint\u001b[39m(d)\n\u001b[1;32m---> 17\u001b[0m     dist \u001b[38;5;241m=\u001b[39m find_cos_dist(descriptor, \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmean\u001b[49m\u001b[43m(\u001b[49m\u001b[43md\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[0;32m     18\u001b[0m     possiblePeople\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mlist\u001b[39m(database\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mkeys())[i])\n\u001b[0;32m     19\u001b[0m     vectorDist\u001b[38;5;241m.\u001b[39mappend(dist)\n",
+      "File \u001b[1;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36mmean\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\kavya\\anaconda3\\envs\\week2\\lib\\site-packages\\numpy\\core\\fromnumeric.py:3464\u001b[0m, in \u001b[0;36mmean\u001b[1;34m(a, axis, dtype, out, keepdims, where)\u001b[0m\n\u001b[0;32m   3461\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   3462\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m mean(axis\u001b[38;5;241m=\u001b[39maxis, dtype\u001b[38;5;241m=\u001b[39mdtype, out\u001b[38;5;241m=\u001b[39mout, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m-> 3464\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_methods\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_mean\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3465\u001b[0m \u001b[43m                      \u001b[49m\u001b[43mout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\kavya\\anaconda3\\envs\\week2\\lib\\site-packages\\numpy\\core\\_methods.py:169\u001b[0m, in \u001b[0;36m_mean\u001b[1;34m(a, axis, dtype, out, keepdims, where)\u001b[0m\n\u001b[0;32m    165\u001b[0m arr \u001b[38;5;241m=\u001b[39m asanyarray(a)\n\u001b[0;32m    167\u001b[0m is_float16_result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m--> 169\u001b[0m rcount \u001b[38;5;241m=\u001b[39m \u001b[43m_count_reduce_items\u001b[49m\u001b[43m(\u001b[49m\u001b[43marr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkeepdims\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mkeepdims\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwhere\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mwhere\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    170\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m rcount \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m where \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m umr_any(rcount \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m    171\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMean of empty slice.\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;167;01mRuntimeWarning\u001b[39;00m, stacklevel\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\kavya\\anaconda3\\envs\\week2\\lib\\site-packages\\numpy\\core\\_methods.py:77\u001b[0m, in \u001b[0;36m_count_reduce_items\u001b[1;34m(arr, axis, keepdims, where)\u001b[0m\n\u001b[0;32m     75\u001b[0m     items \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     76\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m ax \u001b[38;5;129;01min\u001b[39;00m axis:\n\u001b[1;32m---> 77\u001b[0m         items \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m=\u001b[39m arr\u001b[38;5;241m.\u001b[39mshape[\u001b[43mmu\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnormalize_axis_index\u001b[49m\u001b[43m(\u001b[49m\u001b[43max\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43marr\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mndim\u001b[49m\u001b[43m)\u001b[49m]\n\u001b[0;32m     78\u001b[0m     items \u001b[38;5;241m=\u001b[39m nt\u001b[38;5;241m.\u001b[39mintp(items)\n\u001b[0;32m     79\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     80\u001b[0m     \u001b[38;5;66;03m# TODO: Optimize case when `where` is broadcast along a non-reduction\u001b[39;00m\n\u001b[0;32m     81\u001b[0m     \u001b[38;5;66;03m# axis and full sum is more excessive than needed.\u001b[39;00m\n\u001b[0;32m     82\u001b[0m \n\u001b[0;32m     83\u001b[0m     \u001b[38;5;66;03m# guarded to protect circular imports\u001b[39;00m\n",
+      "\u001b[1;31mAxisError\u001b[0m: axis 0 is out of bounds for array of dimension 0"
+     ]
+    }
+   ],
+   "source": [
+    "pic = Image.open(r'.\\pics\\test\\Will_Smith_test.jpg')  \n",
+    "pic_arr = np.array(pic)\n",
+    "boxes, probabilities, landmarks = model.detect(pic_arr)\n",
+    "descriptors = model.compute_descriptors(pic_arr, boxes)\n",
+    "#database = FaceDatabase()\n",
+    "db.load('database.pkl')\n",
+    "print(f\"Number of faces detected: {len(boxes)}\")\n",
+    "verdict = descriptorMatch(db, descriptors, threshold=0.5)\n",
+    "print(verdict)\n",
+    "displayFinalPicture(pic_arr, verdict)"
    ]
   },
   {
