demo.ipynb changes

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -647,18 +647,11 @@
     }
    ],
    "source": [
-    "db.load('database.pkl')\n",
+    "\"\"\"db.load('database.pkl')\n",
     "print(list(db.data.keys())[0])\n",
     "print(list(db.data.values())[0].descriptors)\n",
-    "len(list(db.data.keys()))"
+    "len(list(db.data.keys()))\"\"\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
