--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,21 +663,22 @@
      "output_type": "stream",
      "text": [
       "Number of faces detected: 1\n",
-      "Will_Smith\n"
+      "Tom_Cruise\n"
      ]
     }
    ],
    "source": [
-    "pic = Image.open(r'.\\pics\\test\\Will_Smith_test.jpg')  \n",
+    "pic = Image.open(r'.\\pics\\test\\Tom_Cruise_test.jpg')  \n",
     "pic_arr = np.array(pic)\n",
     "boxes, probabilities, landmarks = model.detect(pic_arr)\n",
     "descriptors = model.compute_descriptors(pic_arr, boxes)\n",
     "#database = FaceDatabase()\n",
+    "db = FaceDatabase(file_path=\"database.pkl\")\n",
     "db.load('database.pkl')\n",
     "print(f\"Number of faces detected: {len(boxes)}\")\n",
     "verdict = descriptorMatch(db, descriptors, threshold=0.5)\n",
     "print(verdict)\n",
-    "displayFinalPicture(pic_arr, verdict)"
+    "#displayFinalPicture(pic_arr, verdict)"
    ]
   },
   {
