--- a/test.ipynb
+++ b/test.ipynb
@@ -7,7 +7,6 @@
    "outputs": [],
    "source": [
     "#displaying images\n",
-    "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.patches import Rectangle #drawing a rectangle\n",
     "#read images, convert to numpy, manipulate\n",
@@ -17,7 +16,10 @@
     "#identify edges, discriptive vectors etc\n",
     "from facenet_models import FacenetModel\n",
     "#other imports\n",
-    "from descriptor import descriptorMatch, displayFinalPicture"
+    "from vision_profile import FaceDatabase\n",
+    "from descriptor import descriptorMatch, displayFinalPicture\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -31,32 +33,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'load'",
+     "ename": "UnidentifiedImageError",
+     "evalue": "cannot identify image file '.\\\\pics\\\\test\\\\group_pic_test.jpg'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m descriptors \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mcompute_descriptors(pic_arr, boxes)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m#database = FaceDatabase()\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[43mdatabase\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdatabase.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNumber of faces detected: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(boxes)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      8\u001b[0m verdict \u001b[38;5;241m=\u001b[39m descriptorMatch(database, descriptors, threshold\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'load'"
+      "\u001b[1;31mUnidentifiedImageError\u001b[0m                    Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m pic \u001b[38;5;241m=\u001b[39m \u001b[43mImage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m.\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mpics\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mtest\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mgroup_pic_test.jpg\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m  \n\u001b[0;32m      2\u001b[0m pic_arr \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(pic)\n\u001b[0;32m      3\u001b[0m boxes, probabilities, landmarks \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mdetect(pic_arr)\n",
+      "File \u001b[1;32mc:\\Users\\kavya\\anaconda3\\envs\\week2\\lib\\site-packages\\PIL\\Image.py:3309\u001b[0m, in \u001b[0;36mopen\u001b[1;34m(fp, mode, formats)\u001b[0m\n\u001b[0;32m   3307\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(message)\n\u001b[0;32m   3308\u001b[0m msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcannot identify image file \u001b[39m\u001b[38;5;132;01m%r\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m (filename \u001b[38;5;28;01mif\u001b[39;00m filename \u001b[38;5;28;01melse\u001b[39;00m fp)\n\u001b[1;32m-> 3309\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m UnidentifiedImageError(msg)\n",
+      "\u001b[1;31mUnidentifiedImageError\u001b[0m: cannot identify image file '.\\\\pics\\\\test\\\\group_pic_test.jpg'"
      ]
     }
    ],
    "source": [
-    "pic = Image.open(r'.\\pics\\test\\Will_Smith_test.jpg')  \n",
+    "pic = Image.open(r'.\\pics\\test\\group_pic_test.jpg')  \n",
     "pic_arr = np.array(pic)\n",
     "boxes, probabilities, landmarks = model.detect(pic_arr)\n",
     "descriptors = model.compute_descriptors(pic_arr, boxes)\n",
     "#database = FaceDatabase()\n",
-    "database.load('database.pkl')\n",
+    "db = FaceDatabase(file_path=\"database.pkl\")\n",
+    "db.load('database.pkl')\n",
     "print(f\"Number of faces detected: {len(boxes)}\")\n",
-    "verdict = descriptorMatch(database, descriptors, threshold=0.5)\n",
+    "verdict = descriptorMatch(db, descriptors, threshold=0.5)\n",
     "print(verdict)\n",
-    "displayFinalPicture(pic_arr, verdict)\n"
+    "#displayFinalPicture(pic_arr, verdict)"
    ]
   },
   {
