--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "from cosdistance import cosine_distance\n",
     "from descriptor import descriptorMatch, displayFinalPicture\n",
     "\n",
-    "\n",
+    "#import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
     "\n",
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -663,12 +663,12 @@
      "output_type": "stream",
      "text": [
       "Number of faces detected: 1\n",
-      "Angelina_Jolie\n"
+      "No match found\n"
      ]
     }
    ],
    "source": [
-    "pic = Image.open(r'./pics/test/Angelina_Jolie_test.jpg')  \n",
+    "pic = Image.open(r'./pics/test/Rick.jpg')  \n",
     "pic_arr = np.array(pic)\n",
     "boxes, probabilities, landmarks = model.detect(pic_arr)\n",
     "descriptors = model.compute_descriptors(pic_arr, boxes)\n",
@@ -678,7 +678,9 @@
     "print(f\"Number of faces detected: {len(boxes)}\")\n",
     "verdict = descriptorMatch(db, descriptors, threshold=0.5)\n",
     "print(verdict)\n",
-    "displayFinalPicture(pic_arr, verdict)"
+    "#np.save('arr', pic_arr)\n",
+    "#displayFinalPicture(pic_arr, verdict)\n",
+    "#plt.show()"
    ]
   },
   {
