added more pictures to database, fixed functions, ran successful tests

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,66 +25,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Angelina_Jolie\n",
       "added\n",
-      "Angelina_Jolie\n",
       "added\n",
-      "Angelina_Jolie\n",
       "added\n",
-      "Margot_Robbie\n",
       "added\n",
-      "Margot_Robbie\n",
       "added\n",
-      "Margot_Robbie\n",
       "added\n",
-      "Scarlett_Johansson\n",
       "added\n",
-      "Scarlett_Johansson\n",
       "added\n",
-      "Scarlett_Johansson\n",
       "added\n",
-      "Tilda_Swinton\n",
       "added\n",
-      "Tilda_Swinton\n",
       "added\n",
-      "Tilda_Swinton\n",
       "added\n",
-      "Timothee_Chalamet\n",
       "added\n",
-      "Timothee_Chalamet\n",
       "added\n",
-      "Timothee_Chalamet\n",
       "added\n",
-      "Tom_Cruise\n",
       "added\n",
-      "Tom_Cruise\n",
       "added\n",
-      "Tom_Cruise\n",
       "added\n",
-      "Tom_Holland\n",
       "added\n",
-      "Tom_Holland\n",
       "added\n",
-      "Tom_Holland\n",
       "added\n",
-      "Will_Smith\n",
       "added\n",
-      "Will_Smith\n",
       "added\n",
-      "Will_Smith\n",
       "added\n",
-      "Zendaya\n",
       "added\n",
-      "Zendaya\n",
       "added\n",
-      "Zendaya\n",
+      "added\n",
+      "added\n",
+      "added\n",
+      "added\n",
+      "added\n",
+      "added\n",
+      "added\n",
+      "added\n",
+      "added\n",
+      "added\n",
+      "added\n",
+      "added\n",
+      "added\n",
+      "added\n",
+      "added\n",
       "added\n",
       "saved\n"
      ]
@@ -97,12 +85,13 @@
     "for filename in glob.glob(r'.\\pics\\train\\*.jpg'):\n",
     "    pic = Image.open(filename)\n",
     "    pic_arr = np.array(pic)\n",
-    "    boxes, probabilities, landmarks = model.detect(pic_arr)\n",
+    "    boxes, prob, _ = model.detect(pic_arr)\n",
     "    name = filename[13:-6]\n",
-    "    print(name)\n",
     "    labels.append(name)\n",
     "    descriptors = model.compute_descriptors(pic_arr, boxes) #gets descriptor for every file\n",
-    "    db.add_image(name, descriptors)\n",
+    "    for i, d in enumerate(descriptors):\n",
+    "        if prob[i] > 0.99: #0.99 prob or greater, then the image is def a person\n",
+    "            db.add_image(name, d)\n",
     "    print('added')\n",
     "db.save()\n",
     "print('saved')"
@@ -129,51 +118,6 @@
     "print(list(db.data.keys())[0])\n",
     "print(list(db.data.values())[0].descriptors)\n",
     "len(list(db.data.keys()))\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of faces detected: 2\n",
-      "[[0.11783773]]\n",
-      "Timothee_Chalamet\n",
-      "[[0.09817028]]\n",
-      "Zendaya\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "pic = Image.open(r'./pics/test/group_pic.jpg')  \n",
-    "pic_arr = np.array(pic)\n",
-    "boxes, probabilities, landmarks = model.detect(pic_arr)\n",
-    "descriptors = model.compute_descriptors(pic_arr, boxes)\n",
-    "#database = FaceDatabase()\n",
-    "db = FaceDatabase(file_path=\"database.pkl\")\n",
-    "db.load('database.pkl')\n",
-    "print(f\"Number of faces detected: {len(boxes)}\")\n",
-    "for i in range(len(descriptors)):\n",
-    "    verdict = descriptorMatch(db, descriptors[i].reshape(1, 512), threshold=0.5)\n",
-    "    print(verdict)\n",
-    "#np.save('arr', pic_arr)\n",
-    "displayFinalPicture(pic_arr, verdict)\n",
-    "#plt.show()"
    ]
   },
   {
