rename database and others

--- a/test.ipynb
+++ b/test.ipynb
@@ -25,12 +25,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#initialize model\n",
     "model = FacenetModel()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -45,13 +46,14 @@
     }
    ],
    "source": [
+    "#classify image and assign label\n",
     "pic = Image.open(r'./pics/test/group_pic.jpg')  \n",
     "pic_arr = np.array(pic)\n",
     "boxes, probabilities, landmarks = model.detect(pic_arr)\n",
     "descriptors = model.compute_descriptors(pic_arr, boxes)\n",
     "#database = FaceDatabase()\n",
-    "db = FaceDatabase(file_path=\"database.pkl\")\n",
-    "db.load('database.pkl')\n",
+    "db = FaceDatabase(file_path=\"actor.pkl\")\n",
+    "db.load('actor.pkl')\n",
     "#print(f\"Number of faces detected: {len(boxes)}\")\n",
     "verdict = []\n",
     "for i in range(len(descriptors)):\n",
@@ -90,8 +92,8 @@
     "    boxes, probabilities, landmarks = model.detect(pic_arr)\n",
     "    descriptors = model.compute_descriptors(pic_arr, boxes)\n",
     "    #database = FaceDatabase()\n",
-    "    db = FaceDatabase(file_path=\"database.pkl\")\n",
-    "    db.load('database.pkl')\n",
+    "    db = FaceDatabase(file_path=\"actor.pkl\")\n",
+    "    db.load('actor.pkl')\n",
     "    verdict = []\n",
     "    for i in range(len(descriptors)):\n",
     "        verdict.append(descriptorMatch(db, descriptors[i].reshape(1, 512), threshold=0.5))\n",
